fixed touch on mobile

--- a/css/film-map-of-the-world/film-map-of-the-world.css
+++ b/css/film-map-of-the-world/film-map-of-the-world.css
@@ -54,10 +54,8 @@ html,body
 
 .header h1 a{
   color:#c9c9c9;
-  /* text-decoration-line: underline;
-  text-decoration-style: dotted; */
   text-decoration: none;
-  border-bottom: 0.5px dotted #c9c9c9;
+  border-bottom: 1px dotted #c9c9c9;
 }
 
 .header p a:hover {
@@ -109,7 +107,7 @@ html,body
   width:100%;
   color:#c9c9c9;
   /* display:none; */
-  transform:translate(-50%, 3px);
+  transform:translate(-47%, 3px);
   z-index:1000;
   cursor:pointer;
   user-select:none;
